Fix styling of collection tags on mobile
[#172142917]

--- a/src/components/collection/card/CollectionCard.less
+++ b/src/components/collection/card/CollectionCard.less
@@ -11,6 +11,7 @@
   .collection-card__title {
     display: flex;
     justify-content: space-between;
+    height: 27px;
 
     .collection-title {
       overflow: hidden;
@@ -37,7 +38,6 @@
     flex-wrap: wrap;
     width: 100%;
     min-height: 38px;
-    margin-bottom: 15px;
 
     @media (min-width: @screen-md) {
       justify-content: space-between;
@@ -170,6 +170,7 @@
 
   &.collection-card--grid {
     .collection-card__detail-row {
+      margin-top: 15px;
       flex-direction: column;
     }
 
