--- a/src/components/common/tags/AttachmentTag.less
+++ b/src/components/common/tags/AttachmentTag.less
@@ -8,7 +8,7 @@
   font-weight: 500;
   line-height: 32px;
   transition: all 300ms ease-in-out;
-  padding: 0 8px;
+  padding: 0 8px 0 3px;
 
   &__label {
     padding-left: 3px;
